[package]
name = "diesel_pg_trgm"
version = "0.0.1"
authors = ["Callym <hi@callym.com>"]
homepage = "https://github.com/callym/diesel_pg_trgm"
repository = "https://github.com/callym/diesel_pg_trgm"
edition = "2018"
exclude = ["src/schema.rs"]

[dependencies]
diesel = { version = "1.3", features = ["postgres"] }

[dev-dependencies]
lazy_static = "1.2"
