[package]
name = "triforce_rs"
version = "0.0.1"
authors = ["Callym <hi@callym.com>"]
homepage = "https://github.com/callym/triforce_rs"
repository = "https://github.com/callym/triforce_rs"
edition = "2018"
exclude = ["src/schema.rs"]

[dependencies]
diesel = { version = "1.3", features = ["postgres"] }

[dev-dependencies]
lazy_static = "1.2"
